2020-10-15  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph/x11] Icon support.

	* graph/x11/grx11.c (gr_x11_surface_set_icon): Implement it.
	(gr_x11_surface_init): Initialize the driver backend.

2020-10-15  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Icon support framework.

	* graph/grdevice.c (grSetIcon): Define new function.
	* graph/graph.h (grSetIcon): Declare it.
	* graph/grobjs.c (grSetIconFunc): Declare the driver backend.
	(grSurface): Add it.

2020-10-11  Werner Lemberg  <wl@gnu.org>

	* src/ftmemchk.c: Include `compiler-macros.h'.

2020-10-10  Werner Lemberg  <wl@gnu.org>

	* Version 2.10.3 released.
	==========================


	Tag sources with `VER-2-10-3.

	* README: Updated.
	* man/*.1: Updated.

2020-09-29  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgrid.c (event_grid_zoom): Pretty scale formatting.

2020-09-29  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid] Implement reversible floating zoom.

	The floating zoom is neccessary to display extremely large sizes
	after scaling them down, but it has to stay rounded to integers when
	displaying grids and bitmaps for small sizes. All this can be
	achievied by truncating and bit-adjusting numbers in IEEE 754 format.
	To make it portable too, we rely on C99 `frexpf' and `ldexpf'.

	* src/ftgid.c (status): Change type of `scale'.
	(ZOOM, grid_status_init, grid_status_rescale,
	grid_status_draw_{grid,outline}): Updated accordingly.
	(event_grid_zoom): Implement truncated reversible zoom.

2020-09-28  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgrid.c (ZOOM, *): Macro to zoom metrics.

2020-09-28  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgrid.c (grid_status_rescale): Move and rename.

2020-09-17  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Introduce 64th format for displaying values.

	* src/ttdebug.c (FORMAT_INTEGER, FORMAT_FLOAT, FORMAT_64TH): New
	enum values.
	(use_float): Global variable replaced by...